--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
             <div class="bg-white text-center pt-4">
                 <a class="footer" href="#">
-                    <img src="/assets/img/logo-black.png" alt="" height="35px" width="108px">
+                    <img src="./assets/img/logo-black.png" alt="" height="35px" width="108px">
                 </a>
                 <h6>@2022 Cuppon ComidaSantiago Todos los derechos reservados</h6>
             </div>
