--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/74b1bdbe40.js" crossorigin="anonymous"></script>
 <style>
     body{
-        font-family: Roboto;
+        font-family: Arial, Helvetica, sans-serif;
     }
 </style>
 
